--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
         <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <!-- Level 1 'HAPPY' Header -->
-
+        <h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
 
         <!-- pararaph text 'PUBLISHED BY...' -->
@@ -39,6 +39,18 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
+
+WRITTEN BY PHARRELL WILLIAMS
+
+PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
+
+PHARRELLWILLIAMS.COM
+
+[columbia-logo.png]
+
+COLUMBIARECORDS.COM
+
+[sony-logo.png]
       </div>
     </div>
   </body>
