--- a/index.html
+++ b/index.html
@@ -32,25 +32,19 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-          <img src="">
+          <img src="images/columbia-logo.png" alt="columbia-logo" title="happy">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+          <span>COLUMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
+        <img src="images/sony-logo.png" alt="sony-logo" title="happy with sony">
 
 
 
 
 
-
-
-[columbia-logo.png]
-
-COLUMBIARECORDS.COM
-
-[sony-logo.png]
       </div>
     </div>
   </body>
